Changed name card padding

--- a/styles.css
+++ b/styles.css
@@ -86,8 +86,7 @@ html {
 
 .name-card {
   color: white;
-  position: relative;
-  left: 5%;
+  padding-left: 5%;
 }
 .name-card .subtitle {
   color: grey;
