Added responsive navbar

--- a/index.jade
+++ b/index.jade
@@ -10,6 +10,8 @@ html(lang="en")
   body
     //- script(src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js")
     nav#navbar
+      .responsive-menu
+        i.fas.fa-bars.fa-lg
       a.nav-link(href="#welcome-section") Home
       a.nav-link(href="#about") About
       a.nav-link(href="#projects") Projects
