--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .title {
   font: 200 1.2em "Open Sans", sans-serif;
   font-weight: 300;
@@ -45,13 +51,7 @@
   background-color: rgba(0, 0, 0, 0.9);
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
+html, body {
   width: 100vw;
 }
 
@@ -62,23 +62,31 @@ section {
 #navbar {
   position: fixed;
   top: 0;
-  display: flex;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
   background-color: black;
   width: 100%;
   height: 3.5rem;
   z-index: 1;
 }
-#navbar a {
-  width: 25%;
+#navbar .responsive-menu {
+  display: none;
+}
+#navbar .nav-link {
+  width: 100%;
   color: white;
   text-decoration: none;
   text-align: center;
   font: 200 1.2em "Open Sans", sans-serif;
   line-height: 3.5rem;
-  transition: 0.3s;
+  transition: 0.5s;
 }
-#navbar a:hover, #navbar a.active {
+#navbar .nav-link.active {
   background-color: #0647f9;
+}
+#navbar .nav-link:hover {
+  background-color: #bfbfbf;
+  color: black;
 }
 
 #welcome-section {
@@ -216,6 +224,28 @@ footer p {
 }
 
 @media (max-width: 1024px) {
+  #navbar {
+    grid-template-columns: 100%;
+  }
+  #navbar .responsive-menu {
+    background-color: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+    height: 3.5rem;
+    padding: rem;
+  }
+  #navbar .responsive-menu .fa-bars {
+    color: white;
+    margin-right: 1rem;
+    cursor: pointer;
+  }
+  #navbar .nav-link {
+    background-color: inherit;
+    display: none;
+  }
+
   .columns {
     flex-direction: column;
   }
