Updated About section and Product Landing Page

--- a/index.jade
+++ b/index.jade
@@ -36,8 +36,12 @@ html(lang="en")
           ul
             li freeCodeCamp
             ul 
-              li Reponsive Web Design Certificate
-              li Javascript Algorithms and Data Structures Certificate
+              li 
+                a(href="https://www.freecodecamp.org/certification/disquietude/responsive-web-design" target="_blank") Reponsive Web Design Certificate
+              li 
+                a(href="https://www.freecodecamp.org/certification/disquietude/javascript-algorithms-and-data-structures" target="_blank") Javascript Algorithms and Data Structures Certificate
+              li 
+                a(href="https://www.freecodecamp.org/certification/disquietude/legacy-front-end" target="_blank") Front End Development Certificate 
         .column
           h1 Web Development Skills
           h2 
@@ -58,8 +62,8 @@ html(lang="en")
             i.fab.fa-js-square
           ul
             li jQuery
-            li Angular
-            li React
+            li AngularJS
+            li ReactJS
     .divider.divider-bg-1
       .overlay
         .divider-title
@@ -72,7 +76,7 @@ html(lang="en")
         a.project-tile(href="https://codepen.io/Disquietude/full/mKQMdP/" target="_blank")
           img(src="images/thumbnails/survey.PNG", alt="Survey Form")
           .project-name Survey Form
-        a.project-tile(href="https://codepen.io/Disquietude/full/qKwLgJ/" target="_blank")
+        a.project-tile(href="https://disquietude.github.io/Product-Landing-Page/" target="_blank")
           img(src="images/thumbnails/product-landing-page.PNG", alt="Product Landing Page")
           .project-name Product Landing Page
         a.project-tile(href="https://codepen.io/Disquietude/full/RBPrJa/" target="_blank")
