Updated Wikipedia Viewer

--- a/index.jade
+++ b/index.jade
@@ -85,7 +85,7 @@ html(lang="en")
       .section-title
         h1.title AngularJS Projects
       .container.tiles
-        a.project-tile(href="https://codepen.io/Disquietude/full/ddEYEW/" target="_blank")
+        a.project-tile(href="https://disquietude.github.io/Wikipedia-Viewer/" target="_blank")
           img(src="images/thumbnails/wikipedia-viewer.PNG", alt="Wikipedia Viewer")
           .project-name Wikipedia Viewer
         a.project-tile(href="https://codepen.io/Disquietude/full/XEWoLL/" target="_blank")
