Added Recipe Box project

--- a/index.jade
+++ b/index.jade
@@ -44,26 +44,35 @@ html(lang="en")
                 a(href="https://www.freecodecamp.org/certification/disquietude/legacy-front-end" target="_blank") Front End Development Certificate 
         .column
           h1 Web Development Skills
-          h2 
-            | HTML
-            i.fab.fa-html5 
-          ul
-            li Haml
-            li Jade/Pug
-          h2 
-            | CSS
-            i.fab.fa-css3
-          ul
-            li Sass
-            li Bootstrap
-            li Bulma 
-          h2 
-            | Javascript
-            i.fab.fa-js-square
-          ul
-            li jQuery
-            li AngularJS
-            li ReactJS
+          .columns
+            .column.column--no-margin-bottom
+              h2 
+                | HTML
+                i.fab.fa-html5 
+              ul
+                li Haml
+                li Jade/Pug
+              h2 
+                | CSS
+                i.fab.fa-css3
+              ul
+                li Sass
+                li Bootstrap
+                li Bulma 
+                li BEM Architecture
+            .column.column--no-margin-bottom
+              h2 
+                | Javascript
+                i.fab.fa-js-square
+              ul
+                li ECMAScript 2015 (ES6)
+                li jQuery
+                li AngularJS
+                li ReactJS and Redux
+                li Babel
+                li Webpack
+                li NodeJS and NPM 
+                li ESLint
     .divider.divider-bg-1
       .overlay
         .divider-title
@@ -106,6 +115,9 @@ html(lang="en")
         a.project-tile(href="https://codepen.io/Disquietude/full/vrJxeW/" target="_blank")
           img(src="images/thumbnails/simon-game.PNG", alt="Simon Game")
           .project-name Simon Game
+        a.project-tile(href="https://disquietude.github.io/Recipe-Box/" target="_blank")
+          img(src="images/thumbnails/recipe-box.PNG", alt="Recipe Box")
+          .project-name Recipe Box
     .divider.divider-bg-2
       .overlay
         .divider-title
