Added Markdown Previewer

--- a/index.jade
+++ b/index.jade
@@ -20,7 +20,7 @@ html(lang="en")
       .overlay
         .name-card
           h1.title Danny Ngo
-          h2.subtitle Industrial Engineer and Web Developer 
+          h2.subtitle Front-End Web Developer 
     section#about
       .section-title
         h1.title About Me
@@ -39,7 +39,7 @@ html(lang="en")
               li 
                 a(href="https://www.freecodecamp.org/certification/disquietude/responsive-web-design" target="_blank") Reponsive Web Design Certificate
               li 
-                a(href="https://www.freecodecamp.org/certification/disquietude/javascript-algorithms-and-data-structures" target="_blank") Javascript Algorithms and Data Structures Certificate
+                a(href="https://www.freecodecamp.org/certification/disquietude/javascript-algorithms-and-data-structures" target="_blank") JavaScript Algorithms and Data Structures Certificate
               li 
                 a(href="https://www.freecodecamp.org/certification/disquietude/legacy-front-end" target="_blank") Front End Development Certificate 
         .column
@@ -62,7 +62,7 @@ html(lang="en")
                 li BEM Architecture
             .column.column--no-margin-bottom
               h2 
-                | Javascript
+                | JavaScript
                 i.fab.fa-js-square
               ul
                 li ECMAScript 2015 (ES6)
@@ -79,19 +79,6 @@ html(lang="en")
           h1.title Projects
     section#projects
       .section-title
-        h1.title Responsive Web Design Projects
-        h2.subtitle with Bulma CSS framework
-      .container.tiles
-        a.project-tile(href="https://codepen.io/Disquietude/full/mKQMdP/" target="_blank")
-          img(src="images/thumbnails/survey.PNG", alt="Survey Form")
-          .project-name Survey Form
-        a.project-tile(href="https://disquietude.github.io/Product-Landing-Page/" target="_blank")
-          img(src="images/thumbnails/product-landing-page.PNG", alt="Product Landing Page")
-          .project-name Product Landing Page
-        a.project-tile(href="https://codepen.io/Disquietude/full/RBPrJa/" target="_blank")
-          img(src="images/thumbnails/tech-doc-page.PNG", alt="Technical Documentation Page")
-          .project-name Technical Documentation Page 
-      .section-title
         h1.title AngularJS Projects
       .container.tiles
         a.project-tile(href="https://disquietude.github.io/Wikipedia-Viewer/" target="_blank")
@@ -102,7 +89,7 @@ html(lang="en")
           .project-name Twitch App
         a.project-tile(href="https://codepen.io/Disquietude/full/pLLwLe/" target="_blank")
           img(src="images/thumbnails/javascript-calc.PNG", alt="Javascript Calculator")
-          .project-name Javascript Calculator
+          .project-name JavaScript Calculator
       .section-title
         h1.title ReactJS Projects 
       .container.tiles
@@ -118,6 +105,9 @@ html(lang="en")
         a.project-tile(href="https://disquietude.github.io/Recipe-Box/" target="_blank")
           img(src="images/thumbnails/recipe-box.PNG", alt="Recipe Box")
           .project-name Recipe Box
+        a.project-tile(href="https://disquietude.github.io/Markdown-Previewer/" target="_blank")
+          img(src="images/thumbnails/markdown-previewer.PNG", alt="Markdown Previewer")
+          .project-name Markdown Previewer
     .divider.divider-bg-2
       .overlay
         .divider-title
@@ -134,7 +124,7 @@ html(lang="en")
         p.label Phone:
         p 1-416-720-5091
         i.fab.fa-github.fa-3x
-        p.label Github:
+        p.label GitHub:
         p 
           a#profile-link(href="https://github.com/Disquietude" target="_blank") github.com/Disquietude
         i.fab.fa-codepen.fa-3x
