--- a/index.jade
+++ b/index.jade
@@ -41,7 +41,9 @@ html(lang="en")
               li 
                 a(href="https://www.freecodecamp.org/certification/disquietude/javascript-algorithms-and-data-structures" target="_blank") JavaScript Algorithms and Data Structures Certificate
               li 
-                a(href="https://www.freecodecamp.org/certification/disquietude/legacy-front-end" target="_blank") Front End Development Certificate 
+                a(href="https://www.freecodecamp.org/certification/disquietude/legacy-front-end" target="_blank") Front End Development Certificate
+              li
+                a(href="https://www.freecodecamp.org/certification/disquietude/front-end-libraries" target="_blank") Front End Libraries Certificate
         .column
           h1 Web Development Skills
           .columns
@@ -108,6 +110,9 @@ html(lang="en")
         a.project-tile(href="https://disquietude.github.io/Markdown-Previewer/" target="_blank")
           img(src="images/thumbnails/markdown-previewer.PNG", alt="Markdown Previewer")
           .project-name Markdown Previewer
+        a.project-tile(href="https://disquietude.github.io/Drum-Machine/" target="_blank")
+          img(src="images/thumbnails/drum-machine.PNG", alt="Drum Machine")
+          .project-name Drum Machine
     .divider.divider-bg-2
       .overlay
         .divider-title
