Updated Pomodoro Clock

--- a/index.jade
+++ b/index.jade
@@ -73,8 +73,9 @@ html(lang="en")
                 li ReactJS and Redux
                 li Babel
                 li Webpack
-                li NodeJS and NPM 
                 li ESLint
+                li NodeJS and NPM 
+                li ExpressJS
     .divider.divider-bg-1
       .overlay
         .divider-title
@@ -95,7 +96,7 @@ html(lang="en")
       .section-title
         h1.title ReactJS Projects 
       .container.tiles
-        a.project-tile(href="https://codepen.io/Disquietude/full/geyzzw/" target="_blank")
+        a.project-tile(href="https://disquietude.github.io/Pomodoro-Clock/" target="_blank")
           img(src="images/thumbnails/pomodoro-clock.PNG", alt="Pomodoro Clock")
           .project-name Pomodoro Clock
         a.project-tile(href="https://codepen.io/Disquietude/full/eKObGV/" target="_blank")
